# brave-core

app/: brave_settings_strings.grdp
browser/: brave_local_state_prefs.cc  brave_profile_prefs.cc  sources.gni
browser/extensions/api/settings_private/: brave_prefs_util.cc
browser/resources/settings/brave_privacy_page/: brave_personalization_options.html  brave_personalization_options.ts
browser/trace_tools/: brave_trace_service.cc  brave_trace_service.h  dump_recorder.cc  dump_recorder.h  dump_tab_session.cc  dump_tab_session.h  dump_writer.cc  dump_writer.h  mcp_server.cc  mcp_server.h  network_trace_recorder.cc  network_trace_recorder.h  patch_engine.cc  patch_engine.h  patch_recorder.cc  patch_recorder.h  patch_tab_session.cc  patch_tab_session.h  sources.gni  tab_trace_session.cc  tab_trace_session.h  trace_domain_util.cc  trace_domain_util.h  trace_writer.cc  trace_writer.h
browser/ui/: BUILD.gn
browser/ui/views/toolbar/: brave_toolbar_view.cc  brave_toolbar_view.h  dump_toolbar_button.cc  dump_toolbar_button.h  mcp_copy_bubble.cc  mcp_copy_bubble.h  mcp_indicator_view.cc  mcp_indicator_view.h  trace_toolbar_button.cc  trace_toolbar_button.h
browser/ui/webui/settings/: brave_settings_localized_strings_provider.cc
chromium_src/components/javascript_dialogs/: tab_modal_dialog_manager.cc
chromium_src/ui/views/bubble/: bubble_dialog_delegate_view.h
components/constants/: BUILD.gn  enhanced_phishing_protection.h  trace_tools.h
patches/: components-javascript_dialogs-BUILD.gn.patch  components-javascript_dialogs-tab_modal_dialog_manager.cc.patch
(+1 files in other folders)
