# Copyright (c) 2026 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

brave_browser_trace_tools_sources = [
  "//brave/browser/trace_tools/brave_trace_service.cc",
  "//brave/browser/trace_tools/brave_trace_service.h",
  "//brave/browser/trace_tools/trace_domain_util.cc",
  "//brave/browser/trace_tools/trace_domain_util.h",
  "//brave/browser/trace_tools/trace_writer.cc",
  "//brave/browser/trace_tools/trace_writer.h",
]

brave_browser_trace_tools_deps = [
  "//base",
  "//brave/components/constants",
  "//net",
  "//url",
]
